fixing problem where span elements arent expanding to 100% width on mobile. mainly sX-X and sX- classes.

--- a/slate.styl
+++ b/slate.styl
@@ -198,7 +198,7 @@ for i in (1..6)
 // handle small screens
 @media screen and (max-width: 767px)
 	for i in (1..6)
-		.s{i}
+		.s{i}, [class^=s{i}-], [class*= s{i}-]
 			grid-column:1/-1
 			
 	// hide element on smaller devices
